--- a/sourceData/downloadPod.yml
+++ b/sourceData/downloadPod.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: dataRetrievalOSM
+  name: data-retrieval-osm
 spec:
   restartPolicy: Never
   affinity:
