--- a/sourceData/downloadPod.yml
+++ b/sourceData/downloadPod.yml
@@ -31,6 +31,7 @@ spec:
       command: ["/bin/bash", "-c"]
       args:
         - |
-          ENV_PATH="/kube/home/.envs/globalRoads"
-          source activate $ENV_PATH
-          python /kube/home/git/globalRoads/sourceData/retrieveData.py
+          #ENV_PATH="/kube/home/.envs/globalRoads"
+          #source activate $ENV_PATH
+          #python /kube/home/git/globalRoads/sourceData/retrieveData.py
+          sleep 99999
