--- a/openrouteservice/example-route.yml
+++ b/openrouteservice/example-route.yml
@@ -34,3 +34,4 @@ spec:
           ENV_PATH="/kube/home/.envs/osrm"
           source activate $ENV_PATH
           python /kube/home/git/kubeApps/openrouteservice/example.py
+          sleep 999999999
