--- a/sourceData/downloadPod.yml
+++ b/sourceData/downloadPod.yml
@@ -27,6 +27,6 @@ spec:
       args:
         - |
           ENV_PATH="/kube/home/.envs/globalRoads"
-          source activate $ENV_PATH
+          #source activate $ENV_PATH
           #python /kube/home/git/globalRoads/sourceData/retrieveData.py
           #sleep 99999
