--- a/sourceData/downloadPod.yml
+++ b/sourceData/downloadPod.yml
@@ -29,4 +29,4 @@ spec:
           ENV_PATH="/kube/home/.envs/globalRoads"
           #source activate $ENV_PATH
           #python /kube/home/git/globalRoads/sourceData/retrieveData.py
-          #sleep 99999
+          sleep 99999
