--- a/sourceData/downloadPod.yml
+++ b/sourceData/downloadPod.yml
@@ -28,5 +28,5 @@ spec:
         - |
           ENV_PATH="/kube/home/.envs/globalRoads"
           source activate $ENV_PATH
-          python /kube/home/git/globalRoads/sourceData/retrieveData.py
+          #python /kube/home/git/globalRoads/sourceData/retrieveData.py
           sleep 99999
